get all expanses
